[gd_scene load_steps=9 format=3 uid="uid://cqvivrqvaybqt"]

[ext_resource type="Script" uid="uid://bhu55njbflht8" path="res://entities/enemies/ufo/ufo.gd" id="1_b45wu"]
[ext_resource type="Script" uid="uid://wvthhxshywf7" path="res://common/destruct/destructible_2d.gd" id="2_dr5fi"]
[ext_resource type="Script" uid="uid://b13fuwtgjl6ye" path="res://common/spawnable/spawnable_2d.gd" id="2_g1lhv"]
[ext_resource type="AudioStream" uid="uid://c31wu2riy7c1a" path="res://entities/bullets/explosion.wav" id="3_dt0ny"]
[ext_resource type="Texture2D" uid="uid://sqxnuaedgaop" path="res://assets/spritesheet_main.png" id="4_1towo"]
[ext_resource type="Script" uid="uid://drvvt2ajp8o5f" path="res://common/random_audio_player_2d.gd" id="5_1towo"]
[ext_resource type="AudioStream" uid="uid://cb0ygmkpeujd6" path="res://entities/enemies/ufo/ufo.wav" id="7_7omsp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt0ny"]
size = Vector2(16, 7)

[node name="Ufo" type="Node2D"]
script = ExtResource("1_b45wu")

[node name="Destructable2D" type="Area2D" parent="."]
script = ExtResource("2_dr5fi")
audio_streams_destroyed = Array[AudioStream]([ExtResource("3_dt0ny")])
metadata/_custom_type_script = "uid://wvthhxshywf7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destructable2D"]
shape = SubResource("RectangleShape2D_dt0ny")

[node name="Spawnable2D" type="Node2D" parent="." node_paths=PackedStringArray("root_node")]
script = ExtResource("2_g1lhv")
root_node = NodePath("..")
metadata/_custom_type_script = "uid://b13fuwtgjl6ye"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("4_1towo")
region_enabled = true
region_rect = Rect2(1, 40, 16, 7)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.8, 0.35)

[node name="RandomAudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
script = ExtResource("5_1towo")
metadata/_custom_type_script = "uid://drvvt2ajp8o5f"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_7omsp")
autoplay = true
